WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303056
REGRESSION (
299464@main
): When "widows" affects a paragraph, "text-indent" incorrectly applies to second portion
https://bugs.webkit.org/show_bug.cgi?id=303056
Summary
REGRESSION (299464@main): When "widows" affects a paragraph, "text-indent" in...
Brad Andalman
Reported
2025-11-24 09:24:05 PST
Created
attachment 477498
[details]
HTML exhibiting the bug (improperly indented text) In the attached HTML, a paragraph is split across two columns. So that the second column doesn't contain only one line, "widows: 2" is set. This does bring over a second line to the next column, but it is incorrectly indented. This appears in Safari Technology Preview Release 232 (actually, I verified it in Release 229, too). This also appears in the Safari that is currently part of Tahoe 26.2: "Version 26.2 (21623.1.14.11.6)".
Attachments
HTML exhibiting the bug (improperly indented text)
(889 bytes, text/html)
2025-11-24 09:24 PST
,
Brad Andalman
no flags
Details
Screenshot exhibiting the bug (improperly indented text)
(415.72 KB, image/png)
2025-11-24 09:25 PST
,
Brad Andalman
no flags
Details
[fast-cq]Patch
(3.75 KB, patch)
2025-11-27 11:37 PST
,
alan
no flags
Details
Formatted Diff
Diff
HTML that exhibits the bug when orphans are involved
(914 bytes, text/html)
2026-01-14 12:12 PST
,
Brad Andalman
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Brad Andalman
Comment 1
2025-11-24 09:25:59 PST
Created
attachment 477499
[details]
Screenshot exhibiting the bug (improperly indented text) Adding a screenshot that shows this bug in Safari Technology Preview 232 (and not in Safari 26.1)
Radar WebKit Bug Importer
Comment 2
2025-11-24 17:06:45 PST
<
rdar://problem/165373054
>
Brad Andalman
Comment 3
2025-11-25 09:44:29 PST
This bug has a big impact on our application, and we'd be happy to try to find the commit that's responsible, if you think it would help speed things up. Is there an easy way for us to do that? The nightlies only go back one month (though it does look like I can construct a URL to download nightlies a little beyond that). Is there a way to go back further? Or, perhaps there's a repo of older Safari Technology Previews? If you have any advice on how to isolate the offending change, I'd be happy to help!
alan
Comment 4
2025-11-27 11:37:13 PST
Created
attachment 477538
[details]
[fast-cq]Patch
EWS
Comment 5
2025-11-27 13:12:02 PST
Committed
303615@main
(38155c35b096): <
https://commits.webkit.org/303615@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477538
[details]
.
Brad Andalman
Comment 6
2026-01-14 12:12:07 PST
It appears that this bug hasn't been entirely fixed. By amending the original HTML so that it uses `orphans: 1` and has an orphan, the bad "text-indent" appears again. Reopening this bug, but please let me know if you'd rather I filed an entirely new one. (I'll be attaching the repro case shortly.)
Brad Andalman
Comment 7
2026-01-14 12:12:41 PST
Created
attachment 478019
[details]
HTML that exhibits the bug when orphans are involved
alan
Comment 8
2026-01-14 12:22:09 PST
I’ll move it over to a new Bugzilla. Thanks for taking the time to put together a repro case and for following up on this.
alan
Comment 9
2026-01-14 12:27:48 PST
(
bug 305497
)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug