REGRESSION (299464@main): When "widows" affects a paragraph, "text-indent" incorrectly applies to second portion https://bugs.webkit.org/show_bug.cgi?id=303056 <rdar://problem/165373054>

Reviewed by Antti Koivisto.

Pagination may restart line layout at a non-zero line index.

Test: fast/multicol/second-colum-has-first-formatted-line-fail.html

* LayoutTests/fast/multicol/second-colum-has-first-formatted-line-fail-expected.html: Added.
* LayoutTests/fast/multicol/second-colum-has-first-formatted-line-fail.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::lineLayout):

Canonical link: https://commits.webkit.org/303615@main